kube/10-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: static-website
  name: static-website
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-website
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: static-website
    spec:
      containers:
      - image: demoniacdeath/demoniacdeath.me:latest
        imagePullPolicy: Always
        name: static-website
        ports:
        - containerPort: 80
          name: http
