kube/20-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: static-website
spec:
  selector:
    app: static-website
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
